tests/misc_tests/nlist_ui_tests/unlist_rem_in_middle_err.stderr
error: nlist_pat only supports `..` patterns at the end
 --> tests/misc_tests/nlist_ui_tests/unlist_rem_in_middle_err.rs:4:5
  |
4 |     unlist!{[.., _] = nlist![3, 5, 8]}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__unlist` which comes from the expansion of the macro `unlist` (in Nightly builds, run with -Z macro-backtrace for more info)
