tests/misc_tests/nlist_ui_tests/unlist_rem_in_middle_err.rs
use nlist::{nlist, unlist};

fn main() {
    unlist!{[.., _] = nlist![3, 5, 8]}
}